--- a/nuxt-movieapp/package.json
+++ b/nuxt-movieapp/package.json
@@ -10,7 +10,15 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.7.0",
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "autoprefixer": "^10.4.14",
+    "nuxt": "^3.5.2",
+    "nuxt-icon": "^0.4.1",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "@egoist/tailwindcss-icons": "^1.1.0"
   }
 }
