--- a/nuxt-movieapp/package.json
+++ b/nuxt-movieapp/package.json
@@ -15,10 +15,11 @@
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.5.2",
     "nuxt-icon": "^0.4.1",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "postcss": "^8.4.24"
   },
   "dependencies": {
-    "@egoist/tailwindcss-icons": "^1.1.0"
+    "@egoist/tailwindcss-icons": "^1.1.0",
+    "@pinia/nuxt": "^0.4.11",
+    "@vue/composition-api": "^1.7.1"
   }
 }
